[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = "skimage-j4f"
authors = [
    {name = "Aditi Juneja", email = "aditijuneja7@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]


[project.entry-points.skimage_backends]
j4f = "skimage_j4f:interface"

[project.entry-points.skimage_backend_infos]
j4f = "skimage_j4f.interface:info"

[project.optional-dependencies]
developer = [
    'pre-commit==3.8.0',
]
test = [
    'pytest>=7.2',
]

[tool.setuptools]
zip-safe = false
include-package-data = false

platforms = [
    'Linux',
    'Mac OSX',
    'Windows',
    'Unix',
]

[tool.setuptools.dynamic.version]
attr = 'skimage_j4f.__version__'

[tool.ruff]
line-length = 88
target-version = 'py310'

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['I', 'F403', 'F401']

[tool.ruff.format]
docstring-code-format = true
